<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.quoders.apps.android.treepolis.ui.signup.SignupActivity">

    <include layout="@layout/toolbar"/>


    <TextView
        android:id="@+id/textViewWelcomeAppName"
        android:textColor="@color/primary_dark"
        android:fontFamily="sans-serif-thin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/signup"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:id="@+id/editTextCreateUserName"
        android:hint="@string/hint_login_username"
        android:text="david"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:id="@+id/editTextCreateEmail"
        android:hint="@string/hint_login_email"
        android:text="oisinoid@gmail.com"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:id="@+id/editTextCreatePassword"
        android:hint="@string/hint_login_password"
        android:text="1111"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:id="@+id/editTextPasswordConfirm"
        android:hint="@string/hint_login_confirm_password"
        android:text="1111"/>

    <Button
        android:id="@+id/buttonSignUp"
        android:text="@string/signup"
        android:layout_width="250dp"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_login" />


</LinearLayout>
