...
    <string name="field_error_email_invalid">Invalid Email</string>
    <string name="signup_error_unknown">Can not create account at this moment, please try again later.</string>
    <string name="signup_error_email_taken">The Email address is already taken, please try with a different one.</string>
    <string name="signup_error_email_invalid">The Email address is invalid, please try again.</string>
    <string name="signup_error_username_taken">The user name is already taken, please try again with a different one.</string>
    <string name="signup_error_unable_to_login">Can not access your account at this moment, please try again later.</string>
    <string name="signup_progress">Creating account...</string>
    <string name="signup_error">Signup Error</string>
    <string name="dialog_button_ok">OK</string>

    <!-- Home -->
    <string name="title_activity_home">Treepolis</string>
    <string name="title_section1">Section 1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="login_error_title">Login Error</string>
...
